Assignment3/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'do'", "'function'", "'if'", "'else'", 
                     "'continue'", "'auto'", "'break'", "'for'", "'return'", 
                     "'while'", "'out'", "'of'", "'inherit'", "'array'", 
                     "'void'", "'boolean'", "'float'", "'integer'", "'string'", 
                     "'true'", "'false'", "'=='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "'&&'", "'||'", "'!'", "'+'", "'/'", 
                     "'-'", "'*'", "'%'", "'='", "'::'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "','", "';'", "'.'", "':'", "'_'" ]

    symbolicNames = [ "<INVALID>", "INTL", "FLOATL", "BOOLL", "STRINGL", 
                      "DO", "FUNCTION", "IF", "ELSE", "CONTINUE", "AUTO", 
                      "BREAK", "FOR", "RETURN", "WHILE", "OUT", "OF", "INHERIT", 
                      "ARRAY", "VOID", "BOOLEAN", "FLOAT", "INTEGER", "STRING", 
                      "TRUE", "FALSE", "EQUAL", "NOTEQUAL", "GT", "LT", 
                      "GET", "LET", "AND", "OR", "NOT", "ADD", "DIV", "SUB", 
                      "MUL", "MOD", "ASSIGN", "CONCATE", "LB", "RB", "LCB", 
                      "RCB", "LSB", "RSB", "COMMA", "SEMI", "DOT", "COLON", 
                      "UNDERSCORE", "ID", "WS", "LINECMT", "BLOCKCMT", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardecl = 2
    RULE_noassign = 3
    RULE_multipleassign = 4
    RULE_extassign = 5
    RULE_funcdecl = 6
    RULE_funcinherit = 7
    RULE_paramlist = 8
    RULE_param = 9
    RULE_body = 10
    RULE_stmt = 11
    RULE_assignstmt = 12
    RULE_breakstmt = 13
    RULE_continuestmt = 14
    RULE_ifstmt = 15
    RULE_truestmt = 16
    RULE_falsestmt = 17
    RULE_returnstmt = 18
    RULE_callstmt = 19
    RULE_forstmt = 20
    RULE_idlst = 21
    RULE_blockstmt = 22
    RULE_dowhilestmt = 23
    RULE_whilestmt = 24
    RULE_functype = 25
    RULE_primitivetype = 26
    RULE_exprlst = 27
    RULE_expr = 28
    RULE_expr1 = 29
    RULE_expr2 = 30
    RULE_expr3 = 31
    RULE_expr4 = 32
    RULE_expr5 = 33
    RULE_expr6 = 34
    RULE_expr7 = 35
    RULE_expr8 = 36
    RULE_adding = 37
    RULE_multiplying = 38
    RULE_relational = 39
    RULE_strconcate = 40
    RULE_unarylogical = 41
    RULE_binarylogical = 42
    RULE_sign = 43
    RULE_operands = 44
    RULE_funccall = 45
    RULE_arrayType = 46
    RULE_dimension = 47
    RULE_arrayL = 48

    ruleNames =  [ "program", "decl", "vardecl", "noassign", "multipleassign", 
                   "extassign", "funcdecl", "funcinherit", "paramlist", 
                   "param", "body", "stmt", "assignstmt", "breakstmt", "continuestmt", 
                   "ifstmt", "truestmt", "falsestmt", "returnstmt", "callstmt", 
                   "forstmt", "idlst", "blockstmt", "dowhilestmt", "whilestmt", 
                   "functype", "primitivetype", "exprlst", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "expr8", "adding", "multiplying", "relational", "strconcate", 
                   "unarylogical", "binarylogical", "sign", "operands", 
                   "funccall", "arrayType", "dimension", "arrayL" ]

    EOF = Token.EOF
    INTL=1
    FLOATL=2
    BOOLL=3
    STRINGL=4
    DO=5
    FUNCTION=6
    IF=7
    ELSE=8
    CONTINUE=9
    AUTO=10
    BREAK=11
    FOR=12
    RETURN=13
    WHILE=14
    OUT=15
    OF=16
    INHERIT=17
    ARRAY=18
    VOID=19
    BOOLEAN=20
    FLOAT=21
    INTEGER=22
    STRING=23
    TRUE=24
    FALSE=25
    EQUAL=26
    NOTEQUAL=27
    GT=28
    LT=29
    GET=30
    LET=31
    AND=32
    OR=33
    NOT=34
    ADD=35
    DIV=36
    SUB=37
    MUL=38
    MOD=39
    ASSIGN=40
    CONCATE=41
    LB=42
    RB=43
    LCB=44
    RCB=45
    LSB=46
    RSB=47
    COMMA=48
    SEMI=49
    DOT=50
    COLON=51
    UNDERSCORE=52
    ID=53
    WS=54
    LINECMT=55
    BLOCKCMT=56
    ERROR_CHAR=57
    UNCLOSE_STRING=58
    ILLEGAL_ESCAPE=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 98
                self.decl()
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.ID):
                    break

            self.state = 103
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def noassign(self):
            return self.getTypedRuleContext(MT22Parser.NoassignContext,0)


        def multipleassign(self):
            return self.getTypedRuleContext(MT22Parser.MultipleassignContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 109
                self.noassign()
                pass

            elif la_ == 2:
                self.state = 110
                self.multipleassign()
                pass


            self.state = 113
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NoassignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlst(self):
            return self.getTypedRuleContext(MT22Parser.IdlstContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def primitivetype(self):
            return self.getTypedRuleContext(MT22Parser.PrimitivetypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_noassign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNoassign" ):
                return visitor.visitNoassign(self)
            else:
                return visitor.visitChildren(self)




    def noassign(self):

        localctx = MT22Parser.NoassignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_noassign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.idlst()
            self.state = 116
            self.match(MT22Parser.COLON)
            self.state = 117
            self.primitivetype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultipleassignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def extassign(self):
            return self.getTypedRuleContext(MT22Parser.ExtassignContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_multipleassign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultipleassign" ):
                return visitor.visitMultipleassign(self)
            else:
                return visitor.visitChildren(self)




    def multipleassign(self):

        localctx = MT22Parser.MultipleassignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_multipleassign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MT22Parser.ID)
            self.state = 120
            self.extassign()
            self.state = 121
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtassignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def extassign(self):
            return self.getTypedRuleContext(MT22Parser.ExtassignContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def primitivetype(self):
            return self.getTypedRuleContext(MT22Parser.PrimitivetypeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_extassign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtassign" ):
                return visitor.visitExtassign(self)
            else:
                return visitor.visitChildren(self)




    def extassign(self):

        localctx = MT22Parser.ExtassignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_extassign)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(MT22Parser.COMMA)
                self.state = 124
                self.match(MT22Parser.ID)
                self.state = 126
                self.extassign()

                self.state = 127
                self.expr()
                self.state = 128
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(MT22Parser.COLON)
                self.state = 131
                self.primitivetype()
                self.state = 132
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def functype(self):
            return self.getTypedRuleContext(MT22Parser.FunctypeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def body(self):
            return self.getTypedRuleContext(MT22Parser.BodyContext,0)


        def funcinherit(self):
            return self.getTypedRuleContext(MT22Parser.FuncinheritContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(MT22Parser.ID)
            self.state = 137
            self.match(MT22Parser.COLON)
            self.state = 138
            self.match(MT22Parser.FUNCTION)
            self.state = 139
            self.functype()
            self.state = 140
            self.match(MT22Parser.LB)
            self.state = 141
            self.paramlist()
            self.state = 142
            self.match(MT22Parser.RB)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 143
                self.funcinherit()


            self.state = 146
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncinheritContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcinherit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncinherit" ):
                return visitor.visitFuncinherit(self)
            else:
                return visitor.visitChildren(self)




    def funcinherit(self):

        localctx = MT22Parser.FuncinheritContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcinherit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(MT22Parser.INHERIT)
            self.state = 149
            self.match(MT22Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.ParamContext)
            else:
                return self.getTypedRuleContext(MT22Parser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.param()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.COMMA:
                    self.state = 152
                    self.match(MT22Parser.COMMA)
                    self.state = 153
                    self.param()
                    self.state = 158
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def primitivetype(self):
            return self.getTypedRuleContext(MT22Parser.PrimitivetypeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 162
                self.match(MT22Parser.INHERIT)


            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 165
                self.match(MT22Parser.OUT)


            self.state = 168
            self.match(MT22Parser.ID)
            self.state = 169
            self.match(MT22Parser.COLON)
            self.state = 170
            self.primitivetype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = MT22Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignstmt(self):
            return self.getTypedRuleContext(MT22Parser.AssignstmtContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(MT22Parser.ForstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(MT22Parser.IfstmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(MT22Parser.ReturnstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(MT22Parser.CallstmtContext,0)


        def breakstmt(self):
            return self.getTypedRuleContext(MT22Parser.BreakstmtContext,0)


        def continuestmt(self):
            return self.getTypedRuleContext(MT22Parser.ContinuestmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(MT22Parser.WhilestmtContext,0)


        def dowhilestmt(self):
            return self.getTypedRuleContext(MT22Parser.DowhilestmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.assignstmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.vardecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.forstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 177
                self.ifstmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 178
                self.returnstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 179
                self.callstmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 180
                self.breakstmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 181
                self.continuestmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 182
                self.whilestmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 183
                self.dowhilestmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 184
                self.blockstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def expr7(self):
            return self.getTypedRuleContext(MT22Parser.Expr7Context,0)


        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_assignstmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignstmt" ):
                return visitor.visitAssignstmt(self)
            else:
                return visitor.visitChildren(self)




    def assignstmt(self):

        localctx = MT22Parser.AssignstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 187
                self.expr7()
                pass

            elif la_ == 2:
                self.state = 188
                self.match(MT22Parser.ID)
                pass


            self.state = 191
            self.match(MT22Parser.ASSIGN)
            self.state = 192
            self.expr()
            self.state = 193
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(MT22Parser.BREAK, 0)
